# Song-Artist-Quiz

./: Artist.cpp  Artist.h  CMakeLists.txt  MusicLabel.cpp  MusicLabel.h  Question.cpp  Question.h  Quiz.cpp  Quiz.h  QuizDataLabel.txt  QuizDataSongs.txt  README.md  Song.cpp  Song.h  main.cpp  testing.cpp
